--- a/exp 8/index.html
+++ b/exp 8/index.html
@@ -18,8 +18,8 @@
     </div>
 
     <div class="card">
-      <div class="circle">RS</div>
-      <h3>Raj Singh</h3>
+      <div class="circle">SK</div>
+      <h3>Sonu kumar</h3>
       <p>B.Tech - ECE </p>
       <p>addmissionNo: 2025b03110192</p>
       <p>1st Year</p>
