--- a/exp 8/index.html
+++ b/exp 8/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="card">
-      <div class="circle">LB</div>
-      <h3>lavish Bana </h3>
+      <div class="circle">RR</div>
+      <h3>RISHI RANJAN KUMAR </h3>
       <p>B.Tech - ECE </p>
       <p>addmission No: 2025b03110174</p>
       <p>1st Year</p>
