--- a/exp 8/index.html
+++ b/exp 8/index.html
@@ -27,7 +27,7 @@
 
     <div class="card">
       <div class="circle">RR</div>
-      <h3>RISHI RANJAN KUMA</h3>
+      <h3>RISHI RANJAN KUM</h3>
       <p>B.Tech - ECE </p>
       <p>addmission No: 2025b03110174</p>
       <p>1st Year</p>
