--- a/exp 8/index.html
+++ b/exp 8/index.html
@@ -20,7 +20,7 @@
     <div class="card">
       <div class="circle">SK</div>
       <h3>Sonu kumar</h3>
-      <p>B.Tech - ECE </p>
+      <p>B.Tech - EC </p>
       <p>addmissionNo: 2025b03110192</p>
       <p>1st Year</p>
     </div>
