--- a/exp 8/index.html
+++ b/exp 8/index.html
@@ -19,7 +19,7 @@
 
     <div class="card">
       <div class="circle">SK</div>
-      <h3>Sonu kuma</h3>
+      <h3>Sonu Kumar</h3>
       <p>B.Tech - EC </p>
       <p>addmissionNo: 2025b03110205</p>
       <p>1st Year</p>
