--- a/practise/pratiise.html
+++ b/practise/pratiise.html
@@ -68,7 +68,7 @@
                 <li>
                     Electronics Labs
                     <ul class="nested-ul mt-2 space-y-1">
-                        <li>Digital Electronics </li>
+                        <li>Digital Electronics Lab </li>
                         <li>Microprocessor Lab</li>
                     </ul>
                 </li>
