--- a/practise/pratiise.html
+++ b/practise/pratiise.html
@@ -69,7 +69,7 @@
                     Electronics Labs
                     <ul class="nested-ul mt-2 space-y-1">
                         <li>Digital Electronics Lab </li>
-                        <li>Microprocessor La</li>
+                        <li>Microprocessor </li>
                     </ul>
                 </li>
             </ol>
