--- a/practise/pratiise.html
+++ b/practise/pratiise.html
@@ -62,7 +62,7 @@
                     Programming Labs
                     <ul class="nested-ul mt-2 space-y-1">
                         <li>C Lab</li>
-                        <li>Python Lab</li>
+                        <li>Python </li>
                     </ul>
                 </li>
                 <li>
