--- a/practise/pratiise.html
+++ b/practise/pratiise.html
@@ -61,7 +61,7 @@
                 <li>
                     Programming Labs
                     <ul class="nested-ul mt-2 space-y-1">
-                        <li>C++ Lab</li>
+                        <li>C Lab</li>
                         <li>Python Lab </li>
                     </ul>
                 </li>
