--- a/practise/pratiise.html
+++ b/practise/pratiise.html
@@ -59,7 +59,7 @@
             <h2 class="text-3xl font-bold mb-4">Lab Curriculum (Mixed List)</h2>
             <ol class="list-decimal pl-5 space-y-2 text-lg">
                 <li>
-                    Programming Lab
+                    Programming Labs
                     <ul class="nested-ul mt-2 space-y-1">
                         <li>C Lab</li>
                         <li>Python Lab </li>
