--- a/practise/practise2.html
+++ b/practise/practise2.html
@@ -27,7 +27,7 @@
                 <!--ordered list-->  
                 
 
-                <h2>Semester 1 subjects (Ordered list)   </h2>      
+                <h2>Semester 1 subjects ()   </h2>      
                 <ol>
             
                     <li>Mathematics</li>
